--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "web/static"]
 	path = web/static
-	url = git@github.com:bmalum/Constructeev_FrontEnd
+	url = https://github.com/bmalum/Constructeev_FrontEnd.git
